Added personal projects and extracurricular section to home page
Still need to add or remove description

--- a/index.html
+++ b/index.html
@@ -26,9 +26,30 @@
           learning all the different ways computer science can be applied to 
           help others. </p>
       </div>
-      <div class="about-me-image">
+      <!-- TODO: change image -->
+      <img class="profile-image" src="images/main-page/profile.png">
+    </section>
+
+    <!-- Portfolio Info Section -->
+    <section>
+      <div class="personal-projects-container">
+        <div class="personal-projects-text">
+          <p class="personal-projects-heading">Personal Projects</p>
+          <!-- <p class="personal-projects-info">TODO</p> -->
+          <button class="view-projects-button">View Projects</button>
+        </div>
         <!-- TODO: change image -->
-        <img class="profile-image" src="images/profile.png">
+        <img class="personal-projects-image" src="images/main-page/personal-project.png">
+      </div>
+
+      <div class="extracurriculars-container">
+        <!-- TODO: change image -->
+        <img class="personal-projects-image" src="images/main-page/personal-project.png">
+        <div class="extracurriculars-text">
+          <p class="extracurriculars-heading">Extracurriculars</p>
+          <!-- <p class="extracurriculars-info">TODO</p> -->
+          <button class="view-extracurriculars-button">View Extracurriculars</button>
+        </div>
       </div>
     </section>
   </body>
