Added All Personal Projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <p class="header-text"> Hello World, It's Tiffany Nguyen </p>
+    <h1> Hello World, It's Tiffany Nguyen </h1>>
     
     <!-- About Me Section -->
     <section class="about-me-container">
