Added basic extracurriculars page
Still need to update style to match the rest of the website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <h1> Hello World, It's Tiffany Nguyen </h1>>
+    <h1 class="name-heading"> Hello World, It's Tiffany Nguyen </h1>>
     
     <!-- About Me Section -->
     <section class="about-me-container">
