Updated Extracurriculars styling (color and font)
To match the rest of the website

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -14,15 +14,19 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@400;500;600&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="styles/style.css" rel="stylesheet" />
     <link href="styles/extracurriculars.css" rel="stylesheet" />
   </head>
   <body id="page-top">
     <!-- Portfolio Grid-->
-    <section class="page-section bg-light" id="portfolio">
+    <section class="page-section bg-night" id="portfolio">
       <div class="container">
         <div class="text-center">
-          <h2 class="section-heading text-uppercase">Extracurriculars</h2>
+          <h1 class="extracurriculars-heading">Extracurriculars</h1>
           <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
         </div>
         <div class="row">
@@ -30,14 +34,14 @@
             <!-- Portfolio item 1-->
             <div class="portfolio-item">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                <div class="portfolio-hover">
+                <div class="portfolio-hover-yellow">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
                 <img class="extracurriculars-logo" src="images/extracurriculars/logo/acm.png" alt="..." />
               </a>
-              <div class="portfolio-caption">
-                <div class="portfolio-caption-heading">ACM</div>
-                <div class="portfolio-caption-subheading text-muted">September 2022 - Present</div>
+              <div class="portfolio-caption-yellow">
+                <div class="portfolio-caption-heading">SCU ACM</div>
+                <div class="portfolio-caption-subheading">September 2022 - Present</div>
               </div>
             </div>
           </div>
@@ -45,14 +49,14 @@
             <!-- Portfolio item 2-->
             <div class="portfolio-item">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                <div class="portfolio-hover">
+                <div class="portfolio-hover-magenta">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
                 <img class="extracurriculars-logo" src="images/extracurriculars/logo/aiaa.png" alt="..." />
               </a>
-              <div class="portfolio-caption">
+              <div class="portfolio-caption-magenta">
                 <div class="portfolio-caption-heading">SCU AIAA</div>
-                <div class="portfolio-caption-subheading text-muted">September 2022 - Present</div>
+                <div class="portfolio-caption-subheading">September 2022 - Present</div>
               </div>
             </div>
           </div>
@@ -60,14 +64,14 @@
             <!-- Portfolio item 3-->
             <div class="portfolio-item">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                <div class="portfolio-hover">
+                <div class="portfolio-hover-purple">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
                 <img class="extracurriculars-logo" src="images/extracurriculars/logo/bronco racing .png" alt="..." />
               </a>
-              <div class="portfolio-caption">
+              <div class="portfolio-caption-purple">
                 <div class="portfolio-caption-heading">SCU Formula SAE</div>
-                <div class="portfolio-caption-subheading text-muted">September 2022 - Present</div>
+                <div class="portfolio-caption-subheading">September 2022 - Present</div>
               </div>
             </div>
           </div>
@@ -75,14 +79,14 @@
             <!-- Portfolio item 4-->
             <div class="portfolio-item">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                <div class="portfolio-hover">
+                <div class="portfolio-hover-yellow">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
                 <img class="extracurriculars-logo" src="images/extracurriculars/logo/bmes.png" alt="..." />
               </a>
-              <div class="portfolio-caption">
+              <div class="portfolio-caption-yellow">
                 <div class="portfolio-caption-heading">SCU BMES</div>
-                <div class="portfolio-caption-subheading text-muted">September 2022 - Present</div>
+                <div class="portfolio-caption-subheading">September 2022 - Present</div>
               </div>
             </div>
           </div>
@@ -90,14 +94,14 @@
             <!-- Portfolio item 5-->
             <div class="portfolio-item">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                <div class="portfolio-hover">
+                <div class="portfolio-hover-magenta">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
                 <img class="extracurriculars-logo" src="images/extracurriculars/logo/FRC.png" alt="..." />
               </a>
-              <div class="portfolio-caption">
+              <div class="portfolio-caption-magenta">
                 <div class="portfolio-caption-heading">FRC Robotics</div>
-                <div class="portfolio-caption-subheading text-muted">September 2019 - June 2022</div>
+                <div class="portfolio-caption-subheading">September 2019 - June 2022</div>
               </div>
             </div>
           </div>
@@ -105,14 +109,14 @@
             <!-- Portfolio item 6-->
             <div class="portfolio-item">
               <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                <div class="portfolio-hover">
+                <div class="portfolio-hover-purple">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
                 <img class="extracurriculars-logo" src="images/extracurriculars/logo/ai camp.png" alt="..." />
               </a>
-              <div class="portfolio-caption">
+              <div class="portfolio-caption-purple">
                 <div class="portfolio-caption-heading">AI Camp</div>
-                <div class="portfolio-caption-subheading text-muted">August 2022</div>
+                <div class="portfolio-caption-subheading">August 2022</div>
               </div>
             </div>
           </div>
