--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                 <p class="button-text">View Github</p>
               </div>
             </button>
-            <button class="snake-ai-demo-button" onclick="window.open('https://github.com/TiffanyN22/AI-Seminars/blob/main/SnakeAI/SnakeAIDemo.gif');"">
+            <button class="snake-ai-demo-button" onclick="window.open('https://github.com/TiffanyN22/AI-Seminars/blob/main/SnakeAI/SnakeAIDemo.gif');">
               <div class="button-text-container">
                 <i class="fa-solid fa-laptop-code"></i>
                 <p class="button-text">View Demo</p>
