Updated Extracurricular Pop-Up

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -135,7 +135,7 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">SCU Association of Computing Machinery</h2>
+                  <h2 class="text-uppercase acm-heading">SCU Association of Computing Machinery</h2>
                   <p class="item-intro text-muted">BroncoSec Underclassmen Representative</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." /> -->
                   <p>In ACM, I participated in workshops covering different coding languages, cybersecurity 
@@ -145,9 +145,8 @@
                     in Capture the Flag events.
                     <!-- TODO: link to wd^2 info page -->
                   </p>
-                  <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                    <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                  <button class="btn btn-primary-yellow btn-xl text-uppercase" onclick="window.location.href='projects.html'" type="button">
+                    View (WD)^2 Description
                   </button>
                 </div>
               </div>
@@ -166,7 +165,7 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">SCU American Institute of Aeronautics and Astronautics</h2>
+                  <h2 class="text-uppercase aiaa-heading">SCU American Institute of Aeronautics and Astronautics</h2>
                   <p class="item-intro text-muted">Electrical Team Member</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." /> -->
                   <p>I am a part of the electrical team participating in the Cansat Competition's Planetary Probe 
@@ -174,11 +173,10 @@
                     into the air, release a probe with a heat shield and parachute, decend at a specified rate, and 
                     raise a flag once the probe has landed. So far, I have helped research sensors, communication 
                     and data handling, flight software design, and circuit boards.
-                  </p>
-                  <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                    <i class="fas fa-xmark me-1"></i>
+                  <!-- </p>
+                  <button class="btn btn-primary-magenta btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                     Close Project
-                  </button>
+                  </button> -->
                 </div>
               </div>
             </div>
@@ -196,7 +194,7 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">SCU Formula SAE</h2>
+                  <h2 class="text-uppercase fsae-heading">SCU Formula SAE</h2>
                   <p class="item-intro text-muted">Electrical Team Member</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." /> -->
                   <p>I am a part of Bronco Racing's, SCU's Formula SAE team, electrical team as we work to build a 
@@ -205,10 +203,9 @@
                     workshops to learn how to use Altium, and researched safety.  I am also a part of the Data 
                     Collection subteam, where I've organized a list of the data to collect and researched sensors.
                   </p>
-                  <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                    <i class="fas fa-xmark me-1"></i>
+                  <!-- <button class="btn btn-primary-purple btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                     Close Project
-                  </button>
+                  </button> -->
                 </div>
               </div>
             </div>
@@ -226,7 +223,7 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">SCU Biomedical Engineering Society</h2>
+                  <h2 class="text-uppercase bmes-header">SCU Biomedical Engineering Society</h2>
                   <p class="item-intro text-muted">Freshman Representative</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." /> -->
                   <p>In BMES, I am working on project to write code that can analyze EEG waves to predict sleep stage
@@ -234,10 +231,9 @@
                      website and discuss event plans, such as alumni panels, information sessions, and socials, with 
                      the rest of the board.
                   </p>
-                  <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                    <i class="fas fa-xmark me-1"></i>
-                    Close Project
-                  </button>
+                  <!-- <button class="btn btn-primary-yellow btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                    View My EEG Project
+                  </button> -->
                 </div>
               </div>
             </div>
@@ -255,21 +251,23 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">FRC Team 1967</h2>
+                  <h2 class="text-uppercase frc-heading">FRC Team 1967</h2>
                   <p class="item-intro text-muted">Programming Committee Lead</p>
-                  <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." /> -->
+                  <img class="img-fluid d-block mx-auto" src="images/extracurriculars/images/frc-collage.png" alt="..." />
                   <p> In FRC Robotics, I work with a team to build a robot that is about 100lbs with different mechanism to 
                     compete a different game each year. As a programming lead, I coordinated programming subgrounds, communicated
                     design plans with other committees, and worked with mentors. In terms of code, I also wrote and troubleshot  
                     code for various mechanisms, including autonomous, chassis, flywheel with different shooting speeds, vision,
                     a turret that can turn both manually and automatically, and manual and automated climb.  This included
-                    coding motors, encoders, gyros, limelight, color sensors, pneumatics, and more.  Outside of programming, I 
-                    also lanned and lead Chassis in a Day, Kickoff, the Young Women Engineering Symposium, workshops on Arduino 
-                    and Driving, a module to introduce 26 students to programming, and award submissions.
+                    coding motors, encoders, gyros, limelight, color sensors, pneumatics, and more in<span class="magenta-concept">
+                    C++</span> and <span class="magenta-concept">Java</span>.  Outside of programming, I also lanned and lead 
+                    Chassis in a Day, Kickoff, the Young Women Engineering Symposium, workshops on Arduino and Driving, a module 
+                    to introduce 26 students to programming, and award submissions. Highlights of our season include winning the 
+                    2021 Calgames <span class="magenta-concept">Innovation Award</span> for our vision system and the 2022 Silicon 
+                    Valley Regional <span class="magenta-concept">Judge's Award</span> for general robot design and outreach.
                   </p>
-                  <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                    <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                  <button class="btn btn-primary-magenta btn-xl text-uppercase" onclick="window.open('https://github.com/FRCTeam1967/FRCTeam1967');" type="button">
+                    View Our Github
                   </button>
                 </div>
               </div>
@@ -288,20 +286,20 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase">AI Camp</h2>
-                  <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." /> -->
-                  <p> At AI Camp, my team and I worked on building an Air Canvas project that can take in live footage
-                    from the user's webcam, detect the user's hand guestures (thumbs up, thumbs down, palm, fist, point),
-                    and use that to allow the user to draw on the canvas. We also included features for the user to
-                    change their brush to any color of the rainbow based on vertical position, switch the brush to erase,
-                    and increase/decrease the brush size. This computer vision AI aspect of this project involved using YoloV5, 
-                    web scraping,labeling images, and model analysis, and the website the Air Canvas was hosted on was programmed
-                    using HTML, CSS, and Flask.
+                  <h2 class="text-uppercase ai-camp-heading">AI Camp</h2>
+                  <img class="img-fluid d-block mx-auto" src="images/extracurriculars/images/air-canvas.png" alt="..." />
+                  <p> At AI Camp, my team and I worked on building an <span class="purple-concept">Air Canvas</span>
+                    project that can take in live footage from the user's webcam, detect the user's hand guestures (thumbs up,
+                    thumbs down, palm, fist, point), and use that to allow the user to draw on the canvas. We also included features 
+                    for the user to change their brush to any color of the rainbow based on vertical position, switch the brush to 
+                    erase, increase/decrease the brush size, and upload and image for the canvas' background. This computer vision AI 
+                    aspect of this project involved using <span class="purple-concept">YoloV5, web scraping, labeling images, and model 
+                    analysis</span>, and the website the Air Canvas was hosted on was programmed using <span class="purple-concept">HTML, 
+                    CSS, and Flask</span>.
                   </p>
                   <!-- TODO: view github option -->
-                  <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                    <i class="fas fa-xmark me-1"></i>
-                    Close Project
+                  <button class="btn btn-primary-purple btn-xl text-uppercase" onclick="window.open('https://github.com/TiffanyN22/Air-Canvas');" type="button">
+                    View Air Canvas on Github
                   </button>
                 </div>
               </div>
