reorganized html files, added extracurriculars navigation

--- a/html/projects.html
+++ b/html/projects.html
@@ -10,8 +10,8 @@
     <script src="https://kit.fontawesome.com/2a09f2242a.js" crossorigin="anonymous"></script>
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/projects.css">
   </head>
   <body>
     <h1 class="coding-projects-heading"> Coding Projects </h1>
@@ -20,8 +20,8 @@
       <!-- Mafia Moderator Project -->
       <div class="mafia-moderator-container">
         <div class="mafia-image-container">
-          <img class="mafia-settings-image" src="images/projects/mafia-moderator-settings.png">
-          <img class="mafia-night-image" src="images/projects/mafia-moderator-night.png">
+          <img class="mafia-settings-image" src="../images/projects/mafia-moderator-settings.png">
+          <img class="mafia-night-image" src="../images/projects/mafia-moderator-night.png">
         </div>
         <div class="project-text">
           <p class="mafia-heading">Mafia Moderator</p>
@@ -74,12 +74,12 @@
             </button>
           </div>
         </div>
-        <img class="snake-ai-image" src="images/projects/snake-ai.png">
+        <img class="snake-ai-image" src="../images/projects/snake-ai.png">
       </div>
 
       <!-- Metaphor Generator Project -->
       <div class="metaphor-container">
-        <img class="metaphor-image" src="images/projects/metaphor-generator.png">
+        <img class="metaphor-image" src="../images/projects/metaphor-generator.png">
         <div class="project-text">
           <p class="metaphor-heading">Metaphor Generator and Topic Analysis</p>
           <p class="project-description">This program uses <span class="metaphor-concepts">GPT3</span> and 
@@ -121,14 +121,14 @@
             </button>
           </div>
         </div>
-        <img class="wdwd-image" src="images/projects/wdwd.png">
+        <img class="wdwd-image" src="../images/projects/wdwd.png">
       </div>
 
        <!-- Most Likely To Project -->
        <div class="most-likely-to-container">
         <div class="most-likely-to-image-container">
-          <img class="most-likely-to-image-1" src="images/projects/most-likely-to-1.png">
-          <img class="most-likely-to-image-2" src="images/projects/most-likely-to-2.png">
+          <img class="most-likely-to-image-1" src="../images/projects/most-likely-to-1.png">
+          <img class="most-likely-to-image-2" src="../images/projects/most-likely-to-2.png">
         </div>
         <div class="project-text">
           <p class="most-likely-to-heading">Most Likely To</p>
