--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -18,8 +18,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@400;500;600&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="styles/style.css" rel="stylesheet" />
-    <link href="styles/extracurriculars.css" rel="stylesheet" />
+    <link href="../styles/style.css" rel="stylesheet" />
+    <link href="../styles/extracurriculars.css" rel="stylesheet" />
   </head>
   <body id="page-top">
     <!-- Portfolio Grid-->
@@ -37,7 +37,7 @@
                 <div class="portfolio-hover-yellow">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="images/extracurriculars/logo/acm.png" alt="..." />
+                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/acm.png" alt="..." />
               </a>
               <div class="portfolio-caption-yellow">
                 <div class="portfolio-caption-heading">SCU ACM</div>
@@ -52,7 +52,7 @@
                 <div class="portfolio-hover-magenta">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="images/extracurriculars/logo/aiaa.png" alt="..." />
+                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/aiaa.png" alt="..." />
               </a>
               <div class="portfolio-caption-magenta">
                 <div class="portfolio-caption-heading">SCU AIAA</div>
@@ -67,7 +67,7 @@
                 <div class="portfolio-hover-purple">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="images/extracurriculars/logo/bronco racing .png" alt="..." />
+                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/bronco racing .png" alt="..." />
               </a>
               <div class="portfolio-caption-purple">
                 <div class="portfolio-caption-heading">SCU Formula SAE</div>
@@ -82,7 +82,7 @@
                 <div class="portfolio-hover-yellow">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="images/extracurriculars/logo/bmes.png" alt="..." />
+                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/bmes.png" alt="..." />
               </a>
               <div class="portfolio-caption-yellow">
                 <div class="portfolio-caption-heading">SCU BMES</div>
@@ -97,7 +97,7 @@
                 <div class="portfolio-hover-magenta">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="images/extracurriculars/logo/FRC.png" alt="..." />
+                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/FRC.png" alt="..." />
               </a>
               <div class="portfolio-caption-magenta">
                 <div class="portfolio-caption-heading">FRC Robotics</div>
@@ -112,7 +112,7 @@
                 <div class="portfolio-hover-purple">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="images/extracurriculars/logo/ai camp.png" alt="..." />
+                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/ai camp.png" alt="..." />
               </a>
               <div class="portfolio-caption-purple">
                 <div class="portfolio-caption-heading">AI Camp</div>
@@ -129,7 +129,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal"><img src="images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
+          <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
@@ -159,7 +159,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal"><img src="images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
+          <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
@@ -188,7 +188,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal"><img src="images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
+          <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
@@ -217,7 +217,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal"><img src="images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
+          <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
@@ -245,7 +245,7 @@
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal"><img src="images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
+          <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
@@ -253,7 +253,7 @@
                   <!-- Project details-->
                   <h2 class="text-uppercase frc-heading">FRC Team 1967</h2>
                   <p class="item-intro text-muted">Programming Committee Lead</p>
-                  <img class="img-fluid d-block mx-auto" src="images/extracurriculars/images/frc-collage.png" alt="..." />
+                  <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/frc-collage.png" alt="..." />
                   <p> In FRC Robotics, I work with a team to build a robot that is about 100lbs with different mechanism to 
                     compete a different game each year. As a programming lead, I coordinated programming subgrounds, communicated
                     design plans with other committees, and worked with mentors. In terms of code, I also wrote and troubleshot  
@@ -280,14 +280,14 @@
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal"><img src="images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
+          <div class="close-modal" data-bs-dismiss="modal"><img src="../images/extracurriculars/close-icon.svg" alt="Close modal" /></div>
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
                   <h2 class="text-uppercase ai-camp-heading">AI Camp</h2>
-                  <img class="img-fluid d-block mx-auto" src="images/extracurriculars/images/air-canvas.png" alt="..." />
+                  <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/air-canvas.png" alt="..." />
                   <p> At AI Camp, my team and I worked on building an <span class="purple-concept">Air Canvas</span>
                     project that can take in live footage from the user's webcam, detect the user's hand guestures (thumbs up,
                     thumbs down, palm, fist, point), and use that to allow the user to draw on the canvas. We also included features 
