--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -22,6 +22,13 @@
     <link href="../styles/extracurriculars.css" rel="stylesheet" />
   </head>
   <body id="page-top">
+    <!-- navbar -->
+    <nav class="navbar"> 
+      <a class="navbar-item" href="index.html"> Home </a>
+      <a class="navbar-item" href="projects.html"> Coding Project </a>
+      <a class="navbar-item" href="extracurriculars.html"> Extracurriculars </a>
+    </nav>
+    
     <!-- Portfolio Grid-->
     <section class="page-section bg-night" id="portfolio">
       <div class="container">
@@ -267,7 +274,7 @@
                     Valley Regional <span class="magenta-concept">Judge's Award</span> for general robot design and outreach.
                   </p>
                   <button class="btn btn-primary-magenta btn-xl text-uppercase" onclick="window.open('https://github.com/FRCTeam1967/FRCTeam1967');" type="button">
-                    View Our Github
+                    View Team Github
                   </button>
                 </div>
               </div>
