--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,16 @@
 
   </head>
   <body>
+    <!-- navbar -->
+    <nav class="navbar"> 
+      <a class="navbar-item" href="index.html"> Home </a>
+      <a class="navbar-item" href="projects.html"> Coding Project </a>
+      <a class="navbar-item" href="extracurriculars.html"> Extracurriculars </a>
+    </nav>
+
+    <!-- heading -->
     <h1 class="name-heading"> Hello World, It's Tiffany Nguyen </h1>>
-    
+
     <!-- About Me Section -->
     <section class="about-me-container">
       <div class="about-me-text-container">
