--- a/html/projects.html
+++ b/html/projects.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="../styles/projects.css">
   </head>
   <body>
+    <!-- navbar -->
+    <nav class="navbar"> 
+      <a class="navbar-item" href="index.html"> Home </a>
+      <a class="navbar-item" href="projects.html"> Coding Project </a>
+      <a class="navbar-item" href="extracurriculars.html"> Extracurriculars </a>
+    </nav>
+    
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
