Added Focus Pal project, added hover to connect

--- a/html/index.html
+++ b/html/index.html
@@ -113,16 +113,23 @@
       <p class="connect-heading">Learn More and Connect With Me</p>
       <div class="connect-places-container">
         <div class="connect-github">
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-          <a class="connect-text" href="https://github.com/TiffanyN22">Github: TiffanyN22</a>
+          
+          <a class="connect-text" href="https://github.com/TiffanyN22">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+            Github: TiffanyN22
+          </a>
         </div>
         <div class="connect-linkedin">
-          <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-          <a class="connect-text" href="https://www.linkedin.com/in/tiffany-nguyen-6a627b249/">LinkedIn: tiffany-nguyen-6a627b249</a>
+          <a class="connect-text" href="https://www.linkedin.com/in/tiffany-nguyen-6a627b249/">
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            LinkedIn: tiffany-nguyen-6a627b249
+          </a>
         </div>
         <div class="connect-email">
-          <i class="fa-brands fa fa-google"></i>
-          <a class="connect-text" href="mailto:tamthy2012@gmail.com">Gmail: tamthy2012@gmail.com</a>
+          <a class="connect-text" href="mailto:tamthy2012@gmail.com">
+            <i class="fa-brands fa fa-google"></i>
+            Gmail: tamthy2012@gmail.com
+          </a>
         </div>
       </div>
     </section>
