--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,37 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!--Focus Pal Project -->
+      <div class="focus-pal-container">
+        <div class="project-text">
+          <p class="focus-pal-heading">Focus Pal</p>
+          <p class="project-description">This website is an all-in-one program to help students manage their tasks by including
+            a todo list they can save tasks to, a weekly calendar view to schedule when to complete those tasks, and a notes page 
+            linked to each task with a timer. This website was programmed using <span class="focus-pal-concepts">HTML</span>,
+            <span class="focus-pal-concepts">CSS</span>, and <span class="focus-pal-concepts">Javascript</span>, and tasks,
+            calendar events, and notes are saved using <span class="focus-pal-concepts">local storage</span>.
+          </p>
+          <div class="project-button-container">
+            <button  class="focus-pal-github-button" onclick="window.open('https://github.com/TiffanyN22/Focus-Pal');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+            <button class="focus-pal-website-button" onclick="window.open('https://tiffanyn22.github.io/Focus-Pal/');"">
+              <div class="button-text-container">
+                <i class="fa fa-mouse-pointer" aria-hidden="true"></i>
+                <p class="button-text">Visit Website</p>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="focus-pal-image-container">
+          <img class="focus-pal-task-image" src="../images/projects/Focus-Pal-1.png">
+          <img class="focus-pal-calendar-image" src="../images/projects/Focus-Pal-2.png">
+        </div>
+      </div>
+
       <!-- Mafia Moderator Project -->
       <div class="mafia-moderator-container">
         <div class="mafia-image-container">
